@@ -1,3 +1,9 @@
+Tue May 19 22:54:35 2009  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* time.c (time_minus): always return a Float.  [ruby-dev:38446]
+
+	* time.c (time_to_r): new method.  [ruby-dev:38461]
+
 Tue May 19 13:59:35 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* class.c (clone_method): add cast to remove warning from
